--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="app_name">PolterGuide</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="hello_blank_fragment_a">Record a new walk</string>
     <string name="hello_blank_fragment_b">Browse walks</string>
     <string name="hello_blank_fragment_c">Tips and Techniques</string>
+    <string name="action_howto">How To</string>
 
 </resources>
