--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,9 @@
     <string name="hello_blank_fragment_b">Browse walks</string>
     <string name="hello_blank_fragment_c">Tips and Techniques</string>
     <string name="action_howto">How To</string>
+    <string name="record">record</string>
+    <string name="record_title">My Recording 01</string>
+    <string name="record_time">00:00:00</string>
+    <string name="record_location">nowhereseville</string>
 
 </resources>
