Added sign in dialog. If there is no user saved in the sharedpreferences on launch, we show the create account dialog. Username and password can be edited in the preference settings fragment, for testing purposes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,15 @@
     <string name="title_edittext_preference">Choose Username</string>
     <string name="summary_edittext_preference">This will be your Polterguide username</string>
     <string name="dialog_title_edittext_preference">Log In</string>
+    <string name="username">username</string>
+    <string name="username_title">Create Username</string>
+    <string name="fire">Fire!</string>
+    <string name="cancel">Cancel</string>
+    <string name="password">password</string>
+    <string name="signin">Sign In</string>
+    <string name="signup_title">Create Username</string>
+    <string name="signup_message">This will be your Polterguide user name.</string>
+    <string name="ok">ok</string>
+
 
 </resources>
